--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js "
+    "start":"nodemon index.js",
+     "client":"cd frontend && npm start",
+    "dev": "concurrently \"nodemon index.js\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.22.0",
+    "concurrently": "^6.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "node-fetch": "^2.6.5",
